--- a/assets/styles/scss/_fonts.scss
+++ b/assets/styles/scss/_fonts.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
 
-* {
-  font-size: 'Nunito Sans', sans-serif;
-  color: $color-text;
+body * {
+  font-family: 'Nunito Sans', sans-serif;
+  color: var(--text);
 }
 
 /*
